k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog
  namespace: namespace1

spec:
  replicas: 4

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app: product-catalog

  template:
    metadata:
      labels:
        app: product-catalog

    spec:
      containers:
        - name: product-catalog

          image: janki1616/product-catalog:v1

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"

            limits:
              cpu: "250m"
              memory: "256Mi"
