k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog-service
  namespace: namespace1

spec:
  selector:
    app: product-catalog

  ports:
    - name: http
      port: 80
      targetPort: 8080

  type: ClusterIP
